# target-inriver

./: .gitignore  README.md  pyproject.toml
fixtures/: data.singer
fixtures/snapshots/: ItemSize_A8GglKB3a.snapshot.csv  ProductItem_A8GglKB3a.snapshot.csv  Product_A8GglKB3a.snapshot.csv
target_inriver/: __init__.py  auth.py  client.py  sinks.py  target.py
