[tool.poetry]
name = "target-inriver"
version = "0.1.0"
description = "Singer target for InRiver PIM (Product, ProductItem, ItemSize), built with HotglueSingerSDK."
readme = "README.md"
authors = []
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
hotglue-singer-sdk = { git = "https://github.com/hotgluexyz/HotglueSingerSDK.git", branch = "feature/hgi-9478" }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
target-inriver = "target_inriver.target:TargetInriver.cli"
